--- a/views/Doctor Side/doctor.css
+++ b/views/Doctor Side/doctor.css
@@ -412,19 +412,22 @@ li a:visited{
 #ptable
 {
 	position: absolute;
-	left: 135px;
-	top:80px;
+	left: 155px;
+	top:50px;
 	padding: 15px;
     text-align: left;
+	margin-top:20px; 
+	font-size: 15px;
+	margin-left: -0px;
+	font-family: "Verdana";
 	
-	font-size: 20px;
-	font-family: "Avenir Next";
-	font-weight: normal;
-	height: 300px;
+	height: 100px;
+
 }
+
 th
 {
-	font-style: italic;
+	
 	font-weight: 0px;
 }
 
