--- a/views/Pharmacy Side/Exp/index.html
+++ b/views/Pharmacy Side/Exp/index.html
@@ -24,7 +24,7 @@
         <script>
             var app = angular.module("myApp", []);
             app.controller("jsonCtrl", function($scope, $http) {
-                $http.get("https://api.myjson.com/bins/s9mvb")
+                $http.get("http://localhost:3000/presc_history/api")
                 .then(function (res) {
                     
                     
