--- a/views/Doctor Side/doctor.css
+++ b/views/Doctor Side/doctor.css
@@ -87,8 +87,8 @@ input[type=radio]
 }
 #maleavatar
 {
-	height: 100px;
-	width: 100px;
+	height: 70px;
+	width: 65px;
 	margin-left:800px;
 	top:100px; 
 	position: absolute;
@@ -97,8 +97,8 @@ input[type=radio]
 }
 #femaleavatar
 {
-	height: 100px;
-	width: 100px;
+	height: 70px;
+	width: 65px;
 	margin-left: 800px;
 	top:210px;
 	position: absolute;
@@ -398,21 +398,21 @@ li a:visited{
 #table
 {
 	position: absolute;
-	left: 350px;
-	top:80px;
+	left: 220px;
+	top:50px;
 	padding: 15px;
     text-align: left;
 	border: 1px solid black;
 	border-color: #FB9E76;
-	font-size: 30px;
-	font-family: "Avenir Next";
-	font-weight: normal;
+	font-size: 20px;
+	font-family: "Verdana";
+	font-weight: lighter;
 	
 }
 #ptable
 {
 	position: absolute;
-	left: 155px;
+	left: 80px;
 	top:50px;
 	padding: 15px;
     text-align: left;
