--- a/views/Doctor Side/doctorpage.html
+++ b/views/Doctor Side/doctorpage.html
@@ -199,10 +199,10 @@ btn1.onclick =  function () {
 </head>
 <body ng-controller="MainCtrl" background="background.jpg" >
 	<ul>
-		<li id="list1"><input type="image" id="profileicon" src="medical.jpg" ><br><font color="white">Your Profile</font></input></li>
-		<li id="list2"><input type="image" id="loginicon" src="loginicon.jpg"><br><font color="white">Login page</font></input></li>
-    <li id="list4"><input type="image" id="prescriptionicon" src="prescriptionicon.png"><br><font color="white">View prescription</font></input></li>
-		<li id="list3"><input type="image" id="abouticon" src="abouticon.jpg"><br><font color="white">About</font></input></li>
+		<li id="list1"><input type="image" id="profileicon" src="medical.jpg" ><br><font face="verdana" size="2" color="white">Your Profile</font></input></li>
+		<li id="list2"><input type="image" id="loginicon" src="loginicon.jpg"><br><font face="verdana" size="2" color="white">Login page</font></input></li>
+    <li id="list4"><input type="image" id="prescriptionicon" src="prescriptionicon.png"><br><font face="verdana" size="2" color="white">View prescription</font></input></li>
+		<li id="list3"><input type="image" id="abouticon" src="abouticon.jpg"><br><font face="verdana" size="2" color="white">About</font></input></li>
 
 	</ul>
 <form id="doctorform">
@@ -341,7 +341,8 @@ btn1.onclick =  function () {
    
 
 </div>
-
+<img src="femaleavatar.jpg" id="femaleavatar">
+<img src="maleavatar.jpg" id="maleavatar">
 
 
 </body>
