--- a/views/Pharmacy Side/calc/jcalculator.css
+++ b/views/Pharmacy Side/calc/jcalculator.css
@@ -7,8 +7,10 @@
     width: 200px;
     
     display: none;
-    position: absolute;
-    left: 500px;
+    position: relative;
+    left:300px;
+    top:300px;
+    
     text-align: center;
 }
 
@@ -142,7 +144,8 @@
 #demo
 {
     position: relative;
-    left: 630px;
+    left: 300px;
+    top:300px;
     width: 200px;
     height: 100px;
     font-size: 15px;
