--- a/views/Pharmacy Side/doctorpage copy.html
+++ b/views/Pharmacy Side/doctorpage copy.html
@@ -55,7 +55,7 @@ Doctor's view
 <script type="text/javascript">
 var app = angular.module('doctor',[]);
 app.controller('MainCtrl', function ($scope, $http) {
-	$http.get("https://api.myjson.com/bins/8jbyj")
+	$http.get("https://api.myjson.com/bins/mwzu7")
                 .then(function (res) {
                     
                     
@@ -101,11 +101,11 @@ for (var i = 0; i < x.length; i++){
                
 // Get the modal
 var modal = document.getElementById('myModal');
-var modal1 = document.getElementById('myModal1');
+
 
 // Get the button that opens the modal
 var btn = document.getElementById("list1");
-var btn1 = document.getElementById("list4");
+
 
 // Get the <span> element that closes the modal
 var span = document.getElementsByClassName("close")[0];
@@ -115,70 +115,20 @@ btn.onclick =  function open() {
     
    modal.style.display = "block";
    
- 
-  // var request = {
-             //   method: 'get',
-               // url: 'now.json',
-                //dataType: 'json',
-                //contentType: "application/json"
-            //};
-
-            //$scope.arrBirds = new Array;
-
-            //$http(request)
-              //  .success(function (jsonData) {
-                //    $scope.arrBirds = jsonData;
-                  //  $scope.list = $scope.arrBirds;
-                //})
-                //.error(function () {
-
-                //});
-
-//$http.get('category.json').success(function(data){
-           // $scope.books = data;
-               
-
-          //alert("yes");
-       // })
- 
-
-
-
-/*
-var drJSON = '{ "name":"John", "age":31, "department":"Radiology" }';
-
-var myObj = JSON.parse(drJSON);
-document.getElementById("drname").innerHTML = myObj.name;
-document.getElementById("drage").innerHTML = myObj.age;
-document.getElementById("drdepartment").innerHTML = myObj.department;
-    --> */
 }
-btn1.onclick =  function open1() {
-    
-   modal1.style.display = "block";
-  $http.get("category.json")
-                .then(function (res1) {
-                    $scope.myObject1=res1.data.records;
-                });            
-}
+
 // When the user clicks on <span> (x), close the modal
 span.onclick = function() {
     modal.style.display = "none";
 
 }
-span1.onclick = function() {
-    modal1.style.display = "none";
 
-}
 // When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
     if (event.target == modal) {
         modal.style.display = "none";
     }
-    if(event.target == modal1)
-    {
-      modal1.style.display="none";
-    }
+    
 }
 
 
@@ -198,7 +148,7 @@ login.onclick= function()
 	<ul>
 		<li id="list1"><input type="image" id="profileicon" src="medical.jpg" ><br><font color="white">Your Profile</font></input></li>
 		<li id="list2"><input type="image" id="loginicon" src="loginicon.jpg"><br><font color="white">Login page</font></input></li>
-    <li id="list4"><input type="image" id="prescriptionicon" src="prescriptionicon.png"><br><font color="white">View prescription</font></input></li>
+    
 		<li id="list3"><input type="image" id="abouticon" src="abouticon.jpg"><br><font color="white">About</font></input></li>
 
 	</ul>
@@ -206,106 +156,26 @@ login.onclick= function()
 
   
   
-<div id="myModal1" class="modal1">
- 
-          <table id="ptable" ng-repeat="y in myObject1 ">
-                <tr>
-                    <th>Name:</th>
-                    <th>{{y.Name}}</th>
-                    
-                </tr>
-                    <tr>
-                  <th>Age:</th>
-                  <th>{{y.Age}}</th>
-                </tr>
-                <tr>
-                  <th>Gender:</th>
-                  <th>{{y.Gender}}</th>
-                </tr>
-                <tr>
-                  <th>Weight:</th>
-                  <th>{{y.Weight}}</th>
-                </tr>
-                <tr>
-                  <th>Date of Birth:</th>
-                  <th>{{y.DOB}}</th>
-                </tr>
-                <tr>
-                  <th>Patient ID:</th>
-                  <th>{{y.PID}}</th>
-                </tr>
-                <tr>
-                  <th>Symptoms:</th>
-                  <th>{{y.Symp}}</th>
-                </tr>
-              <tr>
-                  <th>Medicine Name:</th>
-                  <th>{{y.MName}}</th>
-                </tr>
-                 
-                <tr>
-                  <th>Dosage:</th>
-                  <th>{{y.Dosage}}</th>
-                </tr>
-                 <tr>
-                  <th>Duration:</th>
-                  <th>{{y.Duration}}</th>
-                </tr>
-                 <tr>
-                  <th>No. of times:</th>
-                  <th>{{y.Nooftimes}}</th>
-                </tr>
-                 <tr>
-                  <th>Special Instructions:</th>
-                  <th>{{y.Specinst}}</th>
-                </tr>
 
-                
-                
-
-            </table>
-            
-<span class="close1">&times;</span>
- 
-
-</div>
 
 
 <div id="myModal" class="modal">
 
-            <table id="table" ng-repeat="x in myObject ">
+            <table id="table">
                 <tr>
                     <th>Employee ID:</th>
-                    <th>{{x.ID}}</th>
+                    <th>{{y.ID}}</th>
                     
                 </tr>
                 <tr>
                   <th>Name:</th>
-                  <th>{{x.Empname}}</th>
+                  <th>{{y.Empname}}</th>
                 </tr>
                
 
             </table>
               <span class="close">&times;</span>
-           <!--<h3>Original JSON file: {{myObject}}</h3>  -->
-  <!--
-         <ul id="ulid" ng-repeat="birds in list">
-          <li> {{ birds.Name }}</li>
-          <li> Yolo </li>
-        </ul>
-       -->
-  
-   <!-- oyt without 
-       <p> {{list[1].Name}} </p>  
-        {{list[0].Name}}
-        {{list[1].Age}}
-        {{list[0].Age}}
-        {{list[1].Department}}
-        {{list[0].Department}}
-      -->
-  
- 
-   
+          
 
 </div>
 
@@ -330,24 +200,46 @@ for (var i = 0; i < btns.length; i++) {
 </script>
 <h3> Prescription History </h3>
 <br>
-
-<div class="row">
-  <div class="column" style="background-color:white;">
-    <table  id="exp1">
+<br>
+<br>
+<p id="ref"> Refresh the page everytime you want to see the updated prescription history. </p>
+<br>
+<br>
+<div class="row" style="background-color:white;">
+  <div class="column" >
+    <table border="1" id="exp1">
                 <tr>
-                    <th>ID</th>
-                    <th>Car</th>
-                    <th>Model</th>
-                </tr>
+                    <th>Name</th>
+                    <th>Gender</th>
+                    <th>Age</th>
+                    <th>Weight</th>
+                    <th>Patient ID</th>
+                    <th>Symptoms</th>
+                    <th>Medicine Name</th>
+                    <th>Dosage</th>
+                    <th>Duration</th>
+                    <th>No. of times per day</th>
+                    <th>Special Instructions</th>
+                  </tr>
                 <tr ng-repeat="x in myObject " >
-                    <th>{{x.id}}</th>
-                    <th>{{x.Car}}</th>
-                    <th>{{x.Model}}</th>
+                    <th>{{x.name}}</th>
+                    <th>{{x.gender}}</th>
+                    <th>{{x.age}}</th>
+                    <th>{{x.weight}}</th>
+                    <th>{{x.p_id}}</th>
+                    <th>{{x.symptoms}}</th>
+                    <th>{{x.medicine}}</th>
+                    <th>{{x.dosage}}</th>
+                    <th>{{x.durage}}</th>
+                    <th>{{x.nooftimes}}</th>
+                    <th>{{x.specinst}}</th>
+                    
                 </tr>
             </table>
       </div>
   
-<p id="ref"> Refresh the page everytime you want to see the updated prescription history. </p>
+
+
 
 <div class="container">
 <input id="demo" type="text" placeholder="Click for calculator" />
