--- a/views/Doctor Side/webpagecode.html
+++ b/views/Doctor Side/webpagecode.html
@@ -54,13 +54,13 @@ $scope.headers = response.headers();
     );
 */
 
-if (a===b)
+    if (a===b)
 {
-	window.location.replace("file:///Users/NatashaPaul/Documents/MP/MajorProject/views/Doctor%20Side/doctorpage.html");
+    window.location.replace("http://localhost:3000/home");
 }
 else if (a==c)
 {
-  window.location.replace("file:///Users/NatashaPaul/Documents/MP/MajorProject/views/Doctor%20Side/doctorpage.html");
+  window.location.replace("http://localhost:3000/presc_history");
 }
 else
 {
